Use /SUBSYSTEM:WINDOWS to avoid creation of a console window.
/SUBSYSTEM:WINDOWS changes the application entry point from main() to
wWinMain. This version holds code for both entry points and makes it
easy to switch between the two options (e.g. to have a console to print
debug output to). Switching can be done by editing the CMakeList.txt or
by changing Linker/System settings in VisualStudio project options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,7 @@ project(nvim-singleton)
 # add the executable
 add_executable(nvim-singleton src/main.cpp)
 target_compile_features(nvim-singleton PRIVATE cxx_std_17)
+
+# In order to build as Win32 GUI application (without console), the following
+# property can be used (see also cmake manual):
+set_target_properties(nvim-singleton PROPERTIES WIN32_EXECUTABLE TRUE)
